--- a/src/app/pages/postput/postput.html
+++ b/src/app/pages/postput/postput.html
@@ -1,47 +1,100 @@
-<p>postput works!</p>
-<div
-  style="
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100vw;
-  "
->
-  <mat-form-field appearance="outline" style="width: 200px">
-    <mat-label>Name</mat-label>
-    <input matInput [(ngModel)]="name" />
-  </mat-form-field>
-  <mat-form-field appearance="outline" style="width: 200px">
-    <mat-label>Destination</mat-label>
-    <mat-select [(ngModel)]="destinationid">
-      @for (destination of destinations; track destination) {
-      <mat-option [value]="destination.value">{{
-        destination.name
-      }}</mat-option>
-      }
-    </mat-select>
-  </mat-form-field>
-  <mat-form-field appearance="outline" style="width: 200px">
-    <mat-label>Country</mat-label>
-    <input matInput [(ngModel)]="country" />
-  </mat-form-field>
-  <mat-form-field appearance="outline" style="width: 200px">
-    <mat-label>Cover Image</mat-label>
-    <input matInput [(ngModel)]="coverimage" />
-  </mat-form-field>
-  <mat-form-field appearance="outline" style="width: 200px">
-    <mat-label>Detail</mat-label>
-    <input matInput [(ngModel)]="detail" />
-  </mat-form-field>
-  <mat-form-field appearance="outline" style="width: 200px">
-    <mat-label>Price</mat-label>
-    <input matInput [(ngModel)]="price" />
-  </mat-form-field>
-  <mat-form-field appearance="outline" style="width: 200px">
-    <mat-label>Duration</mat-label>
-    <input matInput [(ngModel)]="duration" />
-  </mat-form-field>
-  <button mat-raised-button color="primary" (click)="addNew()" style="width: 200px">
-    Add New
-  </button>
+<div class="form-container">
+  <h1 class="title">เพิ่มข้อมูลการเดินทาง</h1>
+
+  <mat-card class="form-card">
+    <mat-card-content>
+      <div class="form-grid">
+        <!-- Left Side -->
+        <div class="left-panel">
+          <!-- Cover Image -->
+          <mat-form-field appearance="outline" class="input-field" style="width: 400px;">
+            <mat-label>Cover Image (URL)</mat-label>
+            <input matInput [(ngModel)]="coverimage" name="coverimage" />
+          </mat-form-field>
+
+          <!-- Preview -->
+          <div class="preview" *ngIf="coverimage">
+            <img
+              [src]="coverimage"
+              alt="Trip Cover"
+              class="preview-img"
+            />
+          </div>
+        </div>
+
+        <!-- Right Side -->
+        <div class="right-panel">
+          <form class="trip-form">
+            <!-- Name -->
+            <mat-form-field appearance="outline" class="input-field">
+              <mat-label>Name</mat-label>
+              <input matInput [(ngModel)]="name" name="name" />
+            </mat-form-field>
+
+            <!-- Destination -->
+            <mat-form-field appearance="outline" class="input-field">
+              <mat-label>Destination</mat-label>
+              <mat-select [(ngModel)]="destinationid" name="destinationid">
+                <mat-option
+                  *ngFor="let destination of destinations"
+                  [value]="destination.value"
+                >
+                  {{ destination.name }}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+
+            <!-- Country -->
+            <mat-form-field appearance="outline" class="input-field">
+              <mat-label>Country</mat-label>
+              <input matInput [(ngModel)]="country" name="country" />
+            </mat-form-field>
+
+            <!-- Detail -->
+            <mat-form-field appearance="outline" class="input-field">
+              <mat-label>Detail</mat-label>
+              <textarea
+                matInput
+                rows="3"
+                [(ngModel)]="detail"
+                name="detail"
+              ></textarea>
+            </mat-form-field>
+
+            <!-- Price -->
+            <mat-form-field appearance="outline" class="input-field">
+              <mat-label>Price</mat-label>
+              <input
+                matInput
+                type="number"
+                [(ngModel)]="price"
+                name="price"
+              />
+            </mat-form-field>
+
+            <!-- Duration -->
+            <mat-form-field appearance="outline" class="input-field">
+              <mat-label>Duration (days)</mat-label>
+              <input
+                matInput
+                type="number"
+                [(ngModel)]="duration"
+                name="duration"
+              />
+            </mat-form-field>
+
+            <!-- Submit -->
+            <button
+              mat-raised-button
+              color="primary"
+              (click)="addNew()"
+              class="submit-btn"
+            >
+              Add New
+            </button>
+          </form>
+        </div>
+      </div>
+    </mat-card-content>
+  </mat-card>
 </div>
