--- a/src/app/pages/detail/detail.html
+++ b/src/app/pages/detail/detail.html
@@ -25,7 +25,7 @@
 
   <!-- ปุ่มจัดการ -->
   <div class="button-group">
-    <button mat-flat-button color="accent" [routerLink]="['/edit', trip.idx]">แก้ไข</button>
+    <button mat-flat-button color="accent" [routerLink]="['/update', trip.idx]">แก้ไข</button>
     <button mat-flat-button color="warn" (click)="deleteTrip()">ลบ</button>
   </div>
 </div>
